# pixel_game

./: readme.md
driven/in_memory_adapter/: Cargo.toml
driven/in_memory_adapter/src/: lib.rs
driving/cli_adapter/: Cargo.toml
driving/cli_adapter/src/: lib.rs  main.rs
driving/rest_adapter/: Cargo.toml
driving/rest_adapter/src/: controller.rs  lib.rs  openapi.rs
game_executable/exe_console_in_memory/: Cargo.toml
game_executable/exe_console_in_memory/src/: main.rs
game_executable/exe_rest_in_memory/: Cargo.toml
game_executable/exe_rest_in_memory/src/: main.rs
pixel_board_core/: Cargo.toml
pixel_board_core/src/: board.rs  lib.rs
