[package]
name = "pixel_board_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.17"
