[package]
name = "rest_adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
pixel_board_core = { path = "../../pixel_board_core" }
serde = { version = "1.0.192", features = ["derive"] }
env_logger = { version = "0.10.0", features = [] }
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.17"
serde_json = "1.0.108"
